--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "@apollo/client": "^3.4.13",
     "@headlessui/react": "^1.4.1",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "^10.3.5",
+    "dayjs": "^1.10.7",
     "graphql": "^15.6.0",
+    "moment": "^2.29.1",
     "next": "latest",
     "nookies": "^2.5.2",
     "postcss": "^8.3.8",
