--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.13",
     "@headlessui/react": "^1.4.1",
     "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "^10.3.5",
     "dayjs": "^1.10.7",
-    "graphql": "^15.6.0",
-    "moment": "^2.29.1",
+    "graphql": "^15.6.1",
+    "graphql-request": "^3.5.0",
     "next": "latest",
     "nookies": "^2.5.2",
     "postcss": "^8.3.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "swr": "^1.0.1",
     "tailwindcss": "^2.2.15"
   }
 }
