--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "autoprefixer": "^10.3.5",
     "dayjs": "^1.10.7",
+    "draft-js": "^0.11.7",
     "graphql": "^15.6.1",
     "graphql-request": "^3.5.0",
     "next": "latest",
@@ -18,6 +19,7 @@
     "postcss": "^8.3.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
     "react-markdown": "^7.0.1",
     "swr": "^1.0.1",
