--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.3.5",
     "dayjs": "^1.10.7",
     "draft-js": "^0.11.7",
+    "framer-motion": "^4.1.17",
     "graphql": "^15.6.1",
     "graphql-request": "^3.5.0",
     "next": "latest",
