--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.1",
-    "@tailwindcss/aspect-ratio": "^0.3.0",
-    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.3.5",
     "color": "^4.0.2",
     "dayjs": "^1.10.7",
@@ -24,6 +25,6 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "swr": "^1.0.1",
-    "tailwindcss": "^2.2.15"
+    "tailwindcss": "^3.0.7"
   }
 }
